<resources>
    <string name="app_name">Inventory App</string>
    <string name="item">Item:</string>
    <string name="required">---Required---</string>
    <string name="price">Price:</string>
    <string name="new_item">Add a new item</string>
    <string name="edit_item">Edit your item</string>
    <string name="select_image">Select Picture</string>
    <string name="image_fail">Failed to load image.</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="dear">Dear</string>
    <string name="place_order">,  Please place an order for the following:  Item:</string>
    <string name="amount">Amount:</string>
    <string name="req_fields">Please fill out required fields</string>
    <string name="error">There was an error</string>
    <string name="item_success">Item saved successfully</string>
    <string name="r_u_sure">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="delete_error">Could not delete.</string>
    <string name="deleted">Item was deleted</string>
    <string name="discard_confirm">Are you sure you want to discard changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quantity">Quantity:</string>
    <string name="dollar_sign">$</string>
    <string name="sale">Sale</string>
    <string name="load_image">Load Image</string>
    <string name="supplier">Supplier:</string>
    <string name="supplier_email">Supplier Email:</string>
    <string name="received">Received</string>
    <string name="sold">Sold</string>
    <string name="reorder">Reorder</string>
    <string name="nobody_home">Looks like nobody\'s home...</string>
    <string name="add_item">Add an item to get started!</string>
    <string name="save">Save</string>
    <string name="tumbleweeds">tumbleweeds</string>
    <string name="req_image">Please load an image</string>
</resources>
